[package]
name = "mqtt-project"
version = "0.1.0"
authors = ["carloscanodomingo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
num-traits = "0.2"
num-derive = "0.3"
mac_address = "1.1.1"
rumqttc = "0.5.0"
bytes = "1"

cache-padded = "1.1.1"
tokio = { version = "1.0", features = ["full", "test-util"] }
tokio-test = "0.4.1"

bincode = "1.0"
influx_db_client = "0.5.0"
serde = { version = "1.0", features = ["derive"]}

futures = "0.3.4"

chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
pretty_env_logger = "0.4"
color-backtrace = "0.4"


reqwest = "0.11.2"
